--- a/style.css
+++ b/style.css
@@ -7,14 +7,17 @@ coloque nas sessões indicadas*/
 :root{
     /* Inserta la variable de los otros colores inspeccionando el exemplo de figma */
     /*Se esforce para trabalhar com variáveis, é uma dica profissional valiosa*/
-   --cor-de-fundo: #F5F5F5;
-   --cor-de-link: #000;
+   --background-color: #333333;
+   --text-color: #D3D3D3;
+   --highlight-color: #9B59B6; /*Amethyst purple*/
+   --accent-color: #2ECC71; /*Emerald green*/ 
 }
 
 body {
     box-sizing: border-box;
-    background-color: var(--cor-de-fundo) ;
+    background-color: var(--background-color) ;
     font-family: 'Raleway';
+    color: var(--text-color);
     margin: 0;
     padding: 0;
     line-height: 1;
@@ -24,7 +27,7 @@ ol, ul,li {
 }
 a{
     text-decoration: none;
-    color: var(--cor-de-link);
+    color: var(--highlight-color);
 }
 
 /*En este desafío nosostros gustaríamos que ustedes intentaran utilizar la metodología BEM. 
@@ -39,16 +42,58 @@ con una interfaz de usuario compleja, y permite la reutilización del código ex
 Enlace de la documentación oficial!
 https://en.bem.info/methodology/quick-start/*/
 
+/* Tudo div */
+
+.tudo {
+    
+}
+
+section {
+    width: 80%;
+    margin: 32px auto;
+}
+
 /*Sección Menu*/
 
 section.menu{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+}
 
+.menu__header {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: var(--highlight-color);
+}
+
+.menu nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.menu__list {
+    display: flex;
+    justify-content: space-around;
+    gap: 15px;
+}
+
+.menu__list__item {
+    /* width: 5rem; */
 }
 
 /*Sección Title*/
 
 section.title{
 
+}
+
+.title__div {
+    display: flex;
+    flex-flow: row-reverse nowrap;
+    align-items: center;
 }
 
 /*Sección About*/
