changed id alura-one to the class academic__courses__item__img__alura

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ section.academic {
     background-color: #0A0A23;
 }
 
-#alura-one {
+.academic__courses__item__img__alura {
     background-color: #FEFEFE;
 }
 
