--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ section.menu{
 .title__profile {
     max-height: 300px;
     max-width: 300px;
+    visibility: hidden;
 }
 
 .title__bio {
@@ -601,6 +602,10 @@ Utiliza las referencias de los breakpoints @media abajo */
         flex-flow: row-reverse nowrap;
         align-items: center;
         padding: 0 2rem;
+    }
+
+    .title__profile {
+        display: inline-block;
     }
 
     /* About me */
